fix: Improve score graphic on mobile

--- a/src/app/basic/donut-graphic/donut-graphic.component.scss
+++ b/src/app/basic/donut-graphic/donut-graphic.component.scss
@@ -1,3 +1,9 @@
+:host {
+  display: block;
+  width: var(--donut-size, 120px);
+  height: var(--donut-size, 120px);
+}
+
 .donut-wrapper {
   display: flex;
   justify-content: center;
@@ -7,10 +13,8 @@
 }
 
 svg {
-  max-width: 100%;
-  max-height: 100%;
-  width: 120px;
-  height: 120px;
+  width: 100%;
+  height: 100%;
 }
 
 .track {
