--- a/src/app/pages/probability-calc/team-probability/team-probability.component.scss
+++ b/src/app/pages/probability-calc/team-probability/team-probability.component.scss
@@ -10,7 +10,7 @@
 .container {
   display: flex;
   align-items: stretch;
-  min-height: calc(8.5em + 0.5em);
+  min-height: calc(10em + 1em);
   margin-top: 0.5em;
   box-sizing: border-box;
   flex-shrink: 0;
@@ -18,6 +18,7 @@
   gap: 1em;
 
   @media (max-width: 768px) {
+    min-height: calc(8.5em + 1em);
     gap: 0.5em;
     padding: 0.5em;
     justify-content: flex-start;
@@ -108,14 +109,28 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 120px;
+  min-height: 10em;
+  min-width: 10em;
+
+  app-donut-graphic {
+    --donut-size: 10em;
+  }
 
   @media (max-width: 768px) {
-    min-height: 96px;
+    min-height: 8.5em;
+    min-width: 8.5em;
 
-    ::ng-deep app-donut-graphic svg {
-      width: 96px !important;
-      height: 96px !important;
+    app-donut-graphic {
+      --donut-size: 8.5em;
+    }
+  }
+
+  @media (max-width: 600px) {
+    min-height: 7.2em;
+    min-width: 7.2em;
+
+    app-donut-graphic {
+      --donut-size: 7.2em;
     }
   }
 }
